style.css
@import url('https://fonts.googleapis.com/css?family=DM+Serif+Display&display=swap');
@import url('https://fonts.googleapis.com/css?family=Archivo+Black&display=swap');
@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
@import url('https://rsms.me/inter/inter.css');

:root {
	font-family: 'DM Serif Display', serif;
	font-size: 8px;
	--primary: #0f50a6;
	--black: #020a14;
	--dark-gray: #333333;
	--logo-blue: #9fb9db;
	--caption-gray: #575757;
	--white: #fff;
}

.full-width {
	width: 100%;
}

.header {
	background-color: #fff;
	margin-bottom: 2rem;
}

@media all and (min-width: 1000px) {
	.header {
		margin-bottom: 8rem;
	}
}

.heading-container {
	margin: auto;
	width: 70%;
}

.image-container,
.content-container,
.findings-container {
	margin: 0 auto;
	width: 92%;
}

@media all and (min-width: 568px) {
	.container {
		width: 80%;
	}
}

@media all and (min-width: 768px) {
	.image-container {
		width: 70%;
	}

	.content-container {
		width: 60%;
	}
}

a:focus {
	border: 2px solid #0f50a6;
	padding: 0.25rem;
}

/***** SKIP LINKS *****/
.skip-links a {
	background-color: var(--primary, #0f50a6);
	color: white;
	font-size: 2rem;
	position: absolute;
	padding: 0.75rem 0.75rem;
	top: -5rem;
}

.skip-links a:focus {
	top: 0;
}

/****** NAVGATION STYLES TEST *****/

.nav {
	background: white;
	color: var(--primary, #0f50a6);
	height: 70px;
	display: flex;
	flex-wrap: wrap;
	align-items: center;
	border-bottom: 0.20px solid rgb(15, 80, 166, 0.17);
}

.nav-logo {
	background: white;
	width: 30%;
	padding: 0px 40px;
	text-align: left;
}

.nav-logo a {
	-webkit-text-stroke: 0.5px #0f50a6;
	font-family: 'DM Serif Display', serif;
	font-size: 3rem;
	color: var(--primary);
	width: 40%;
	padding: 2.25rem 2rem;
	text-decoration: none;
}

.nav-menu {
	width: 70%;
}

.nav-menu .nav-items {
	display: flex;
	justify-content: flex-end;
}

.nav-menu .nav-items li {
	font-size: 2.5rem;
	list-style-type: none;
	padding: 3rem;
	text-align: center;
}

li a {
	/* display: block; */
	text-decoration: none;
	color: var(--primary, #0f50a6);
}

li a:hover {
	text-decoration: none;
	border-bottom: 4px solid var(--primary, #0f50a6);
	padding-bottom: 12px;
}

.nav a.active {
	text-decoration: none;
	border-bottom: 4px solid var(--dark-gray, #333333);
	padding-bottom: 12px;
	color: var(--dark-gray, #333333);
}

@media screen and (max-width: 1000px) {
	.nav {
		height: auto;
	}
	.nav .nav-logo {
		text-align: center;
		width: 100%;
		border-bottom: 0.20px solid rgb(15, 80, 166, 0.17);
		padding: 16px 40px;
	}
	.nav .nav-menu {
		width: 100%;
	}

	.nav .nav-menu ul {
		justify-content: space-around;
	}

	.nav .nav-menu ul li {
		width: 100%;
		padding: 20px 0px;
		font-size: 16px;
	}
}

/* HOMEPAGE HERO */

.hero {
	display: flex;
	align-items: center;
	height: 72vh;
}

.hero h1 {
	font-family: 'Archivo Black', sans-serif;
	font-size: 4.5rem;
	color: var(--dark-gray, #333333);
	line-height: 0.9;
	text-transform: uppercase;
}

.hero h1 span {
	color: var(--primary, #0f50a6);
}

.hero h1 .fade {
	color: #aaa;
}

.hero p {
	font-family: 'Roboto', Tahoma, Geneva, Verdana, sans-serif;
	font-size: 2rem;
	color: var(--black);
	padding-top: 16px;
	padding-left: 3px;
	width: 70%;

}

.hero-text-link {
	color: var(--primary, #0f50a6);
}

@media all and (max-width: 567px) {
	.hero h1 {
		font-size: 3rem;
		line-height: 0.975;
	}
	.hero p {
		font-size: 1.75rem;
		line-height: 2.25rem;
		width: 100%;
		padding-top: 15px;
	}
}

@media all and (min-width: 568px) {
	
	.hero h1 {
		font-size: 4.75rem;
	}
	.hero p {
		font-size: 2rem;
		line-height: 2.75rem;
		width: 80%;
	}
}

@media all and (min-width: 1024px) {
	.hero h1 {
		font-size: 7rem;
	}
	.hero p {
		font-size: 2.25rem;
		line-height: 3.25rem;
	}
}

/***** PROJECT HERO ******/

.background-image {
	background-color: #0f50a6;
}

#project-hero {
	color: white;
	padding-bottom: 1.5rem;
	font-size: 8rem;
}

@media all and (max-width: 568px) {
	#project-hero {
		font-size: 5rem;
	}
}

.label {
	color: var(--white, #fff);
	font-family: 'Roboto', sans-serif;
	font-size: 2.25rem;
	font-weight: 300;
	text-transform: uppercase;
}

/***** PROJECT CONTENT *******/
.project-section {
	padding-bottom: 2rem;
	padding-top: 2rem;
}

.section-heading {
	font-family: 'Inter', sans-serif;
	font-size: 5rem;
	font-weight: bold;
	color: var(--black, #020a14);
	padding-bottom: 3rem;
}

.section-text {
	font-family: 'Inter', sans-serif;
	font-size: 2.35rem;
	color: var(--black, #020a14);
	line-height: 4rem;
	padding-bottom: 4rem;
}

p {
	font-family: 'Inter', sans-serif;
	font-size: 2.5rem;
	color: var(--black, #020a14);
	line-height: 4rem;
	padding-bottom: 4rem;
}

.section-text-links {
	color: var(--primary, #0f50a6);
	font-family: 'Inter', sans-serif;
	font-size: 2.5rem;
}

.captions,
figcaption {
	display: flex;
	flex-direction: column;
	justify-content: center;
	text-align: center;
}

.caption {
	color: var(--caption-gray, #575757);
	font-family: 'Inter', sans-serif;
	font-size: 1.75rem;
	align-self: center;
	padding: 3rem 0;
	line-height: 2.25rem;
}

.links-container,
.single-link {
	display: flex;
	justify-content: center;
	flex-wrap: no-wrap;
	padding-bottom: 2rem;
	width: 100%;
}

.links {
	justify-items: center;
	align-items: center;
	color: var(--primary, #0f50a6);
	font-family: 'Inter', sans-serif;
	font-size: 2rem;
	padding: 20px;
}

@media all and (max-width: 568px) {
	.section-heading {
		font-size: 3.5rem;
	}

	.section-text {
		font-size: 2rem;
	}

	.caption {
		font-size: 1.5rem;
		line-height: 2rem;
	}

	.links {
		font-size: 1.75rem;
	}
	.revisions-list li {
		font-size: 1rem;
		line-height: 2rem;
	}
}

/***** SIDE-BY-SIDE IMAGE */

.multi-image-container {
	display: flex;
	/* justify-content: space-between; */
}

.image-background {
	background-color: #f6f9fe;
	margin-bottom: 36px;
	padding-top: 36px;
	width: 100%;
}

.image-column {
	flex: 50%;
	padding: 2rem;
}

.image-column img {
	width: 100%;
	box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.10);
}

.no-shadow img {
	box-shadow: none;
}

/***** STAKEHOLDER FINDINGS *****/

.findings-dark-background {
	background-color: #0f50a6;
	margin-bottom: 8rem;
}

.findings-container {
	padding: 0 2rem 2rem 2rem;
}

.findings-column {
	padding-bottom: 2rem;
}

.findings-heading {
	font-family: 'Inter', sans-serif;
	font-size: 3rem;
	font-weight: bold;
	color: white;
	text-align: center;
	padding: 4rem 4rem 4.5rem 4rem;
}

.findings-subhead {
	font-family: 'Inter', sans-serif;
	font-size: 2rem;
	font-weight: bold;
	color: white;
	margin-bottom: 1rem;
	padding-bottom: 1rem;
}

.findings {
	/* padding: 0rem 2rem 0rem 2rem; */
	font-family: 'Inter', sans-serif;
	font-size: 1.75rem;
	color: white;
	/* margin: 3rem; */
	line-height: 2.5rem;
	margin: 0 1rem;
}

.findings li {
	color: white;
	padding: 0 0 .75rem 1rem;
	margin-left: 1.5rem;
	list-style-type: initial;
}

.findings li p {
	color: white;
	font-size: 1.5rem;
	line-height: 2.25rem;
	padding-bottom: 2rem;
}

.findings li .user-quote {
	font-weight: bold;
	font-style: italic;
}

@media all and (min-width: 580px) {
	.findings-container {
		display: flex;
	}

	.findings-column {
		margin: 0 2rem;
	}

	.findings li {
		padding: 0 0 1rem 2rem;
	}
}

.findings li span {
	font-weight: bold;
	font-size: 2rem;
}

.text-center {
	text-align: center;
}

.persona-container {
	display: flex;
	align-items: center;
	justify-content: center;
	flex-wrap: wrap;
}

.persona {
	background-color: #0f50a6;
	box-shadow: 0px 2px 15px 0px rgba(0, 0, 0, 0.5);
	border-radius: 8px;
	color: white;
	flex: 1;
	padding: 0 0px 0px;
	margin: 2%;
	min-width: 350px;
	max-width: 480px;
	font-family: 'Inter', sans-serif;
	margin-bottom: 9rem;
}

@media all and (min-width: 800px) and (max-width: 1800px) {
	.persona {
		min-height: 715px;
	}
}

.persona img {
	width: 100%;
	border-radius: 8px 8px 0px 0px;
}

.persona h4 {
	font-size: 2.5rem;
	padding: 20px 0px;
	font-weight: bold;
}

.persona h5 {
	padding-left: 32px;
	font-size: 2rem;
	font-weight: bold;
}

.persona ul {
	font-size: 1.75rem;
	padding: 16px 32px 40px 52px;
	list-style-type: initial;
}

.persona ul li {
	padding: .5rem;
}

.multi-image-grid {
	display: grid;
	grid-template-columns: repeat(2, 2fr);
	justify-items: center;
}

@media all and (max-width: 580px) {
	.nomobile {
		display: none;
	}
}

@media all and (max-width: 1080px) {
	.multi-image-grid {
		display: grid;
		grid-template-columns: repeat(1, 1fr);
		justify-items: center;
	}
}

.multi-image-grid img {
	width: 100%;
}

.section-subheading {
	font-family: 'Inter', sans-serif;
	font-weight: bold;
	font-size: 3.25rem;
	padding: 4rem 0rem 3rem;
}

/***** FOOTER *******/
footer {
	color: #fff;
	background-color: #0f50a6;
	margin-top: 12rem;
	/* position: fixed;
	width: 100%; */
  }

   .container {
	display: flex;
	flex-direction: column;
	max-width: 1440px;
	margin: 0 auto;
	align-items: center;
  }
  
  .flex-row {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	list-style: none;
	padding-top: 28px;					
  }
  
  .flex-row li {
	margin: 0 20px;
	/* margin-bottom: 16px;
	margin-left: 20px; */
  }
	
.flex-row a {
	padding: 0 12px;
	color: white;
	}
	
	footer a {
	  font-size: 16px;
	  color: white;
	}

	footer a:hover {
			text-decoration: none;
			border-bottom: 2px solid var(--white);
			padding-bottom: 8px;
		}

	footer a:focus {
			text-decoration: none;
			border: 2px solid var(--white);
			padding: 10px 8px 8px;
		}
	
	
	.footer-icon-link i {
	  cursor: pointer;
	  font-size: 3rem;
	  margin-bottom: 28px;
	} 
  
  footer p {
	color: white;
	font-size: 1.45rem;
	text-align: center;
	padding-bottom: 1.4rem;
  }
  
  @media all and (max-width: 567px) {
	.footer a {
		font-size: 5px;
	}
	.flex-row {
		display:flex;
		flex-direction: column;
		align-items: center;
	}
	.footer-nav-link{
		padding: 2rem 0;
	}
	.footer-icon-link i {
		font-size: 2.5rem;
		margin-bottom: 20px;
		padding: 10px 0;
	}
}
  



/* .footer-container {
	display: flex;
	justify-content: center;
	flex-wrap: nowrap;
	width: 100%;
}

.footer-text-container {
	display: flex;
	justify-content: center;
	flex-wrap: nowrap;
	width: 80%;
}

#footer-text {
	font-family: 'Roboto', Tahoma, Geneva, Verdana, sans-serif;
	font-size: 1.3rem;
	color: var(--black);
	padding-top: 10px;
	padding-left: 3px;
	width: 70%;
	text-align: center;
}

.footer-container-project {
	display: flex;
	justify-content: center;
	flex-wrap: nowrap;
	width: 100%;
}

.footer-text-container-project {
	display: flex;
	justify-content: center;
	flex-wrap: nowrap;
	width: 70%;
}

.footer-logo {
	background: white;
	width: 30%;
	padding: 10px 0px 0px 40px;
	text-align: left;
}

.footer-logo a {
	-webkit-text-stroke: 0.5px #0f50a6;
	font-family: 'DM Serif Display', serif;
	font-size: 2.5rem;
	color: var(--primary);
	width: 20%;
	padding: 2.25rem 2rem;
	text-decoration: none;
} */

#top-link {
	color: var(--primary, #0f50a6);
	font-family: 'Inter', sans-serif;
	font-size: 1.35rem;
}

.revisions-container {
	margin: 0 auto;
	width: 87%;
}

.revisions-list li {
	list-style-type: square;
	font-family: 'Inter', sans-serif;
	font-size: 2rem;
	color: var(--black, #020a14);
	line-height: 3rem;
	padding-bottom: 4rem;
}

/* CONTACT PAGE  */

#hero_subheading a {
	color: var(--primary, #0f50a6);
}

/* ABOUT PAGE */

#about-heading {
	padding-top: 22.5vh;
}


/* RESUME PAGE */
.resume-image{
	box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.10);
	margin-top: 10rem;
	margin-bottom: 4rem;
}

#resume-download-link {
	margin-bottom: 4rem;
}

@media all and (max-width: 1024px){
	.resume-image {
		margin-top: 4rem;
	}
}

@media all and (max-width: 1000px ){
	.resume-image {
		margin-bottom: 2rem;
	}
	#resume-download-link {
		font-size: 1.75rem;
		
	}
}

